--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="spintimer.css">
 </head>
 
 <body>
@@ -77,7 +78,5 @@
 	integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
 	crossorigin="anonymous"></script>
 <script type="text/javascript" src="index.js"></script>
-<script type="text/javascript" src="spintimer.js"></script>
-
 
 </html>
